--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.7.1",
     "@astrojs/check": "^0.6.0",
+    "@astrojs/react": "^3.3.4",
+    "@astrojs/tailwind": "^5.1.0",
+    "@portabletext/types": "^2.0.13",
+    "@sanity/astro": "^3.0.0",
+    "@sanity/client": "^6.18.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.41.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.8.2",
+    "astro-portabletext": "^0.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sanity": "^3.41.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
