--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "sanity": "^3.44.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.0",
+    "prettier-plugin-astro": "^0.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.1"
   }
 }
