docs: change name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "c-users-rafli-onedrive---bina-nusantara-personal-code-astro-blog-blog",
+  "name": "web-blog",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
